Fix alignment of socials logos in header

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,6 +39,8 @@ header
     justify-content: space-between;
 }
 
+
+
 .top-header p
 {
     font-family: var(--general-font);
@@ -48,7 +50,27 @@ header
 
 .top-header-social-container{
     display: flex;
-    gap: 9px;  
+    justify-content: center;
+    align-items: center;
+    gap: 5px;  
+}
+
+.top-header-social-container > .social-logo
+{
+    min-height: 20px;
+    width: 20px;
+    height: 20px ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.social-logo img
+{
+    width: 100%;
+    height: 100%;
+    display: block;
 }
 
 .main-header
@@ -191,7 +213,7 @@ nav > .book-btn-container
     position: fixed;
     top: 0;
     left: -800px;
-    background-color: #E3C6B8 ;
+    background-color: var(--sidebar-bgcolor);
     min-width: 360px;
     width: 40%;
     display: none;
@@ -199,7 +221,7 @@ nav > .book-btn-container
     justify-content: space-between;
     padding: 20px 30px 40px 30px;
     gap: 40px;
-    border-right: 1px solid #42382e;
+    border-right: 1px solid var(--sidebar-bordercolor);
     animation-duration: 1s; 
     animation-fill-mode: forwards;
 }
@@ -250,7 +272,7 @@ transform: translateX(-50%) rotate(-45deg);
 #sidebar > nav ul li
 {
     width: 100%;
-    border-bottom:1px solid #42382e ;
+    border-bottom:1px solid var(--sidebar-li-bordercolor) ;
     padding: 0px 0px 8px 8px;
 }
 
@@ -310,6 +332,8 @@ transform: translateX(-50%) rotate(-45deg);
     {
         padding: 10px 15px 10px 15px;
     }
+
+
 }
 
 @media (max-width: 516px)
