--- a/styles/variables.css
+++ b/styles/variables.css
@@ -20,6 +20,10 @@
     --burger-menu-bgcolor : #E3C6B8;
     --burger-menu-line-bgcolor : #F8F4F1;
 
+    --sidebar-bgcolor : #E3C6B8 ;
+    --sidebar-bordercolor : #42382e ;
+    --sidebar-li-bordercolor : #42382e ;
+
     --links-fontcolor-hover :#CDA49F ;
 
 
